--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,12 @@ language: go
 sudo: false
 
 go:
-  - 1.1
-  - 1.2
-  - 1.3
-  - 1.4
-  - 1.5
   - 1.6
   - 1.7
   - tip
+
+install:
+  - make get-deps
 
 script:
   - make test
